wdkit popup text align issue fix

--- a/src/dashboard/header_widgets/header_widgets.scss
+++ b/src/dashboard/header_widgets/header_widgets.scss
@@ -786,6 +786,10 @@
         padding: 10px;
         border-radius: 8px;
         color: #ffff;
+        text-align: left;
+    }
+    .she-wdkit-accd-qui{
+        text-align: left;
     }
 
     .she-tpae-content-opan {
